# snow_storage_and_snowmelt_in_nuclear_winter

./: .gitignore  Example.ipynb  Raster_area.ipynb  Untitled-1.ipynb  basin_analysis.py  conftest.py  linearity.py  main.py  plot_clustering.py  plot_snow.ipynb  pyproject.toml  removed_dependencies.txt  river_basins.ipynb  snow_analysis.py  test_gewichtet.ipynb
old code/: basin_analysis_old.py  global_analysis_old.py  land_mask.py  linearity.py  plot.py  plot_clustering_old  plot_spatial.py  test_gewichtet.ipynb
src/: clustering.py  land_mask.py  preprocessing.py  snow_model.py  utilities.py
src/postprocessing/: basin_analysis.py  plot_clustering.py  snow_analysis.py
src/preprocessing/: land_mask.py  prepare_data.py
src/processing/: clustering.py  snow_model.py
tests/: test_snow_model.py
